modified index. html

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <title>TailwindCSS-Starter-Package</title>
 </head>
 <body>
-    <h1 class="text-3xl">TailwindCSS-Starter-Package</h1>
+    <h1>TailwindCSS-Starter-Package</h1>
 </body>
 </html>
